<resources>
    <string name="myapp_name">Coinz</string>
    <string name="title_activity_main">Coinz</string>

    //Mapbox api key
    <string name="access_token">pk.eyJ1IjoidGltbXlnaWxsIiwiYSI6ImNqbjNndDhhbTM2b3Mzd3F5Mjh5NjdvNDcifQ.aDnMQgQUFxRtG7LM-6s41A</string>

    //Login
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">LOGIN</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    //Map
    <string name="map_perm_explain">Your location is needed to play Coins.</string>
    <string name="map_json_error">Could not download map. Check your internet connection and try again.</string>

    //Bottom Nav
    <string name="title_map">Map</string>
    <string name="title_bank">Bank</string>
    <string name="title_shop">Shop</string>
    <string name="title_profile">Profile</string>

    //Bank
    <string name="bank_all_used">You have already deposited 25 coins today.</string>
    <string name="bank_no_coins">You do not currently have any coins to bank.</string>
    <string name="bank_count_label">Coins banked today:</string>
    <string name="bank_gold_label">Gold Balance</string>
    <string name="bank_zero">0</string>
    <string name="bank_button">Bank Coin</string>
    <string name="bank_rates">Rates</string>
    //Transfer
    <string name="transfer_email_prompt">Enter an email to send spare change to:</string>
    <string name="transfer_coin_prompt">Select a coin to send:</string>
    <string name="transfer_button">Transfer</string>
    <string name="transfer_invalid_email">That email does not seem to be valid.</string>
    <string name="transfer_not_self">You cannot transfer coins to yourself.</string>
    <string name="transfer_no_coins">You do not have any coins to transfer.</string>

    //SpareChange
    <string name="spare_label">Since you last played, you have received Spare Change worth:</string>
    <string name="spare_zero">0 gold</string>
    <string name="spare_button">Bank Now</string>

    //Profile
    <string name="profile_LO_button">Logout</string>
    <string name="profile_logged_in_as">Currently logged in as: </string>
    <string name="profile_coins">You have collected a total of: </string>
    <string name="profile_gold">You have earned a total of: </string>
    <string name="profile_distance">You have travelled a total distance of: </string>

    //Shop
    <string name="shop_balance">Gold balance: </string>
    <string name="shop_multi">Coin multiplier: </string>
    <string name="shop_radius">Pickup radius:</string>
    <string name="shop_buy">Buy</string>
    <string name="shop_more_gold">You do not have enough gold to buy this.</string>
    <string name="shop_maxed">You have already have the highest level of this power up.</string>

    //Daily reward
    <string name="reward_prompt">Daily login reward!</string>
    <string name="reward_button">Claim</string>

    //Rates
    <string name="rates_prompt">Today\'s Exchange Rates</string>

</resources>
